projects/papers-reading-club/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: papers-reading-club
  namespace: projects
spec:
  selector:
    app: papers-reading-club
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
