projects/papers-reading-club/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: papers-reading-club
  namespace: projects
  annotations:
    external-dns.public/enabled: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: papers.gtarraga.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: papers-reading-club
                port:
                  number: 80
